fixing display issues, no profile match check yet

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -6,7 +6,7 @@
 	<div class="row">
 
 		<div class="col-md-6 col-md-offset-3" style="text-align:center;margin-bottom:48px">
-			<h1>Welcome to Turbo</h1>
+			<h1>Welcome to Friend Finder</h1>
 			<form action='/' method='POST'>
 			<input type="text" name="name" placeholder="name"/><br/>
 			<input type="text" name="occupation" placeholder="occupation"/><br/>
