--- a/views/profiles.mustache
+++ b/views/profiles.mustache
@@ -18,10 +18,12 @@
 <form action='/addprofile' method="POST">
 <input type="text" name="name" placeholder="name"/><br/>
 <input type="text" name="username" placeholder="username"/><br/>
+<input type="text" name="scores" placeholder="[5,1,2,3,5,4,3,2,4,2]"/><br/>
 <input type="text" name="image" placeholder="Image (/images/example.jpg)"/><br/>
 <input type="text" name="company" placeholder="company"/><br/>
 <input type="text" name="languages" placeholder="languages"/><br/>
 <input type="submit" name="submit" value="Add Profile"/><br/>
+
 </form>
         </body>
     
